# EAIKA

./: .dockerignore  .env.example  .env.test  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  clean_pycache.py  pyproject.toml  test.py
.github/workflows/: ci.yml
backend/: .bandit  .dockerignore  Dockerfile  alembic.ini  pytest.ini  requirements.txt  start.sh  test.py
backend/app/: main.py
backend/app/api/: router.py
backend/app/cache/: __init__.py  cache_manager.py  redis_client.py
backend/app/db/: __init__.py  base.py  init_db.py  session.py
backend/app/exceptions/: __init__.py  custom_exceptions.py  error_codes.py  exception_handlers.py
backend/app/monitoring/: __init__.py  healthcheck.py  logging.py  metrics.py  prometheus.py
backend/app/rate_limit/: limiter.py
backend/app/telemetry/: observability.py  tracing.py
backend/app/utils/: __init__.py  citation_formatter.py  file_utils.py  helpers.py  tokenizer.py  validators.py
backend/app/websockets/: connection_manager.py  websocket_handler.py
backend/app/workers/: celery_workers.py
frontend/: Dockerfile  eslint.config.mjs  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.json  vite.config.ts
frontend/src/: App.css  App.tsx  main.tsx  providers.tsx
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/constants/: colors.ts  navbar.ts
frontend/src/hooks/: useAuth.ts  useChat.ts  (+4 more)
infrastructure/docker/: docker-compose.yml
infrastructure/kubernetes/: backend-deployment.yaml  frontend-deployment.yaml
(+126 files in other folders)
